Added Tomcat configuration files